<package format="2">
  <name>human_robot_collaboration</name>
  <version>1.0.0</version>
  <description>The human_robot_collaboration package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="alessandro.roncone@yale.edu">Alessandro Roncone</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>LGPLv2.1</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">https://github.com/scazlab/human_robot_collaboration</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="alessandro.roncone@yale.edu">Alessandro Roncone</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <depend>aruco</depend>
  <depend>human_robot_collaboration_lib</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rosconsole</depend>
  <depend>ros_speech2text</depend>
  <depend>svox_tts</depend>

  <test_depend>baxter_description</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
