<package format="2">
  <name>human_robot_collaboration</name>
  <version>1.0.0</version>
  <license>LGPLv2.1</license>

  <url type="website">https://github.com/scazlab/human_robot_collaboration</url>
  <description>The human_robot_collaboration package</description>

  <author email="alessandro.roncone@colorado.edu">Alessandro Roncone</author>
  <maintainer email="jake.brawer@yale.edu">Jake Brawer</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <depend>aruco</depend>
  <depend>human_robot_collaboration_lib</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rosconsole</depend>
  <depend>ros_speech2text</depend>
  <depend>svox_tts</depend>

  <test_depend>baxter_description</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
