<package format="2">
  <name>human_robot_collaboration_lib</name>
  <version>1.0.0</version>
  <license>LGPLv2.1</license>

  <url type="website">https://github.com/scazlab/human_robot_collaboration</url>
  <description>Libraries for the human_robot_collaboration project</description>

  <author email="alessandro.roncone@colorado.edu">Alessandro Roncone</author>
  <maintainer email="jake.brawer@yale.edu">Jake Brawer</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <depend>aruco</depend>
  <depend>aruco_ros</depend>
  <depend>human_robot_collaboration_msgs</depend>
  <depend>baxter_core_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rosconsole</depend>
  <depend>trac_ik_lib</depend>

</package>
