<package format="2">
  <name>human_robot_collaboration_msgs</name>
  <version>1.0.0</version>
  <license>LGPLv2.1</license>

  <description>Messages and services for the human_robot_collaboration project</description>
  <url type="website">https://github.com/scazlab/human_robot_collaboration</url>

  <author email="alessandro.roncone@colorado.edu">Alessandro Roncone</author>
  <maintainer email="jake.brawer@yale.edu">Jake Brawer</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
